--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.1",
+    "react-signature-canvas": "^1.0.6",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
